--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,18 @@
   <title>React Image Compressor</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+    <style>
+      div.m-5.pt-5 {
+          padding: 5rem;
+        }
+
+      @media only screen and (max-width: 600px) {
+        div.m-5.pt-5 {
+          padding: 0;
+        }
+      }
+
+    </style>
 </head>
 
 <body>
